--- a/index.html
+++ b/index.html
@@ -628,7 +628,7 @@
     </section> --><!-- End Pricing Section -->
 
     <!-- ======= F.A.Q Section ======= -->
-    <section id="faq" class="faq">
+    <!-- <section id="faq" class="faq">
 
       <div class="container" data-aos="fade-up">
 
@@ -638,9 +638,9 @@
         </header>
 
         <div class="row">
-          <div class="col-lg-6">
+          <div class="col-lg-6"> -->
             <!-- F.A.Q List 1-->
-            <div class="accordion accordion-flush" id="faqlist1">
+            <!-- <div class="accordion accordion-flush" id="faqlist1">
               <div class="accordion-item">
                 <h2 class="accordion-header">
                   <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#faq-content-1">
@@ -683,10 +683,10 @@
             </div>
           </div>
 
-          <div class="col-lg-6">
+          <div class="col-lg-6"> -->
 
             <!-- F.A.Q List 2-->
-            <div class="accordion accordion-flush" id="faqlist2">
+            <!-- <div class="accordion accordion-flush" id="faqlist2">
 
               <div class="accordion-item">
                 <h2 class="accordion-header">
@@ -734,7 +734,7 @@
 
       </div>
 
-    </section><!-- End F.A.Q Section -->
+    </section> --><!-- End F.A.Q Section -->
 
     <!-- ======= Portfolio Section ======= -->
     <section id="portfolio" class="portfolio">
@@ -750,9 +750,8 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">Web</li>
+              <li data-filter=".filter-card">Posters</li>
             </ul>
           </div>
         </div>
@@ -1016,8 +1015,8 @@
                 </div>
               </div>
               <div class="member-info">
-                <h4>Walter White</h4>
-                <span>Chief Executive Officer</span>
+                <h4>Liyan Nechikaden</h4>
+                <span>Founder & Chief Executive Officer</span>
                 <p>Velit aut quia fugit et et. Dolorum ea voluptate vel tempore tenetur ipsa quae aut. Ipsum exercitationem iure minima enim corporis et voluptate.</p>
               </div>
             </div>
@@ -1177,21 +1176,21 @@
                 <div class="info-box">
                   <i class="bi bi-geo-alt"></i>
                   <h3>Address</h3>
-                  <p>A108 Adam Street,<br>New York, NY 535022</p>
+                  <p>Thirurkad, Malappuram<br>Kerala, India 679321</p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box">
                   <i class="bi bi-telephone"></i>
                   <h3>Call Us</h3>
-                  <p>+1 5589 55488 55<br>+1 6678 254445 41</p>
+                  <p>+91 8304845085<br><!-- +1 6678 254445 41 --> <br> </p>
                 </div>
               </div>
               <div class="col-md-6">
                 <div class="info-box">
                   <i class="bi bi-envelope"></i>
                   <h3>Email Us</h3>
-                  <p>info@example.com<br>contact@example.com</p>
+                  <p>info@lnkventures.com<br>ceo@example.com</p>
                 </div>
               </div>
               <div class="col-md-6">
@@ -1218,7 +1217,7 @@
                 </div>
 
                 <div class="col-md-12">
-                  <input type="text" class="form-control" name="subject" placeholder="Subject" required>
+                  <input type="text" class="form-control" name="subjects" placeholder="Subject" required>
                 </div>
 
                 <div class="col-md-12">
