--- a/index.html
+++ b/index.html
@@ -1205,7 +1205,7 @@
           </div>
 
           <div class="col-lg-6">
-            <form action="forms/contact.php" method="post" class="php-email-form">
+            <form action="" method="post" class="php-email-form">
               <div class="row gy-4">
 
                 <div class="col-md-6">
