--- a/dimos-furniture.html
+++ b/dimos-furniture.html
@@ -40,7 +40,7 @@
 
       <nav id="navbar" class="navbar">
         <ul>
-          <li><a class="nav-link scrollto active" href="#">Home</a></li>
+          <li><a class="nav-link scrollto" href="/">Home</a></li>
           <li><a class="nav-link scrollto" href="about.html">About</a></li>
           <li><a class="nav-link scrollto" href="service.html">Services</a></li>
           <li><a class="nav-link scrollto" href="portfolio.html">Portfolio</a></li>
@@ -124,15 +124,23 @@
               <div class="swiper-wrapper align-items-center">
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-1.jpg" alt="">
+                  <img src="assets/img/portfolio/Dimos-Furniture/dimos-furniture-img (1).png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-2.jpg" alt="">
+                  <img src="assets/img/portfolio/Dimos-Furniture/dimos-furniture-img (2).png" alt="">
                 </div>
 
                 <div class="swiper-slide">
-                  <img src="assets/img/portfolio/portfolio-3.jpg" alt="">
+                  <img src="assets/img/portfolio/Dimos-Furniture/dimos-furniture-img (3).png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Dimos-Furniture/dimos-furniture-img (4).png" alt="">
+                </div>
+
+                <div class="swiper-slide">
+                  <img src="assets/img/portfolio/Dimos-Furniture/dimos-furniture-img (5).png" alt="">
                 </div>
 
               </div>
@@ -144,16 +152,17 @@
             <div class="portfolio-info">
               <h3>Project information</h3>
               <ul>
-                <li><strong>Category</strong>: Web design</li>
-                <li><strong>Client</strong>: ASU Company</li>
-                <li><strong>Project date</strong>: 01 March, 2020</li>
-                <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li>
+                <li><strong>Category</strong>: Web design & Development</li>
+                <li><strong>Client</strong>: Dimos Furniture</li>
+                <li><strong>Project date</strong>: 14 Augest, 2023</li>
+                <li><strong>Project URL</strong>: <a target="_blank" href="https://dimosfurniture.in">www.dimosfurniture.in</a></li>
               </ul>
             </div>
             <div class="portfolio-description">
-              <h2>This is an example of portfolio detail</h2>
+              <h2>Project Details</h2>
               <p>
-                Autem ipsum nam porro corporis rerum. Quis eos dolorem eos itaque inventore commodi labore quia quia. Exercitationem repudiandae officiis neque suscipit non officia eaque itaque enim. Voluptatem officia accusantium nesciunt est omnis tempora consectetur dignissimos. Sequi nulla at esse enim cum deserunt eius.
+                A static website made using HTML, CSS & JavaScript. Many other features like animation, CTA, Social Media Integration, SEO, SSL Verification, Google Map Integration, Enquiry Form, Sliding Carousel Etc.
+                Contact form submission details will be sent to corresponding Email and will be saved to a Google Sheet.
               </p>
             </div>
           </div>
@@ -173,7 +182,7 @@
         <div class="row justify-content-center">
           <div class="col-lg-12 text-center">
             <h4>Our Newsletter</h4>
-            <p>Tamen quem nulla quae legam multos aute sint culpa legam noster magna</p>
+            <p>Get digital insights and exclusive offers in your inbox. Subscribe to our newsletter.</p>
           </div>
           <div class="col-lg-6">
             <form action="" method="post">
@@ -188,15 +197,15 @@
       <div class="container">
         <div class="row gy-4">
           <div class="col-lg-5 col-md-12 footer-info">
-            <a href="index.html" class="logo d-flex align-items-center">
-              <img src="assets/img/logo.png" alt="">
-              <span>FlexStart</span>
+            <a href="/" class="logo d-flex align-items-center">
+              <img src="assets/img/Logo/Text-Logo-Black.png" alt="">
+              <!-- <span>FlexStart</span> -->
             </a>
-            <p>Cras fermentum odio eu feugiat lide par naso tierra. Justo eget nada terra videa magna derita valies darta donna mare fermentum iaculis eu non diam phasellus.</p>
+            <p>LNK Ventures: Your trusted partner for digital innovation and excellence, delivering tailored solutions that empower businesses in the ever-evolving digital landscape.</p>
             <div class="social-links mt-3">
               <a href="#" class="twitter"><i class="bi bi-twitter"></i></a>
               <a href="#" class="facebook"><i class="bi bi-facebook"></i></a>
-              <a href="#" class="instagram"><i class="bi bi-instagram"></i></a>
+              <a href="https://instagram.com/lnkventures" class="instagram"><i class="bi bi-instagram"></i></a>
               <a href="#" class="linkedin"><i class="bi bi-linkedin"></i></a>
             </div>
           </div>
@@ -217,8 +226,8 @@
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Custom Software</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">App Development</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul>
           </div>
@@ -226,11 +235,11 @@
           <div class="col-lg-3 col-md-12 footer-contact text-center text-md-start">
             <h4>Contact Us</h4>
             <p>
-              A108 Adam Street <br>
-              New York, NY 535022<br>
-              United States <br><br>
-              <strong>Phone:</strong> +1 5589 55488 55<br>
-              <strong>Email:</strong> info@example.com<br>
+              Thirurkad,<br>
+              Malappuram, Kerala 679321<br>
+              India <br><br>
+              <strong>Phone:</strong> <a href="tel:+918304845085">+91 8304845085</a><br>
+              <strong>Email:</strong><a href="mailto:info@lnkventures"> info@lnkventures.com</a><br>
             </p>
 
           </div>
@@ -241,15 +250,9 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>FlexStart</span></strong>. All Rights Reserved
+        &copy; Copyright 2023 <strong><span><a href="/">LNK Ventures</a></span></strong>. All Rights Reserved
       </div>
-      <div class="credits">
-        <!-- All the links in the footer should remain intact. -->
-        <!-- You can delete the links only if you purchased the pro version. -->
-        <!-- Licensing information: https://bootstrapmade.com/license/ -->
-        <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/flexstart-bootstrap-startup-template/ -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+      
     </div>
   </footer><!-- End Footer -->
 
