--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <li><a class="nav-link scrollto" href="service.html">Services</a></li>
           <li><a class="nav-link scrollto" href="portfolio.html">Portfolio</a></li>
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="#">Blog</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -198,7 +198,7 @@
     </section><!-- End Values Section -->
 
     <!-- ======= Counts Section ======= -->
-    <section id="counts" class="counts">
+    <!-- <section id="counts" class="counts">
       <div class="container" data-aos="fade-up">
 
         <div class="row gy-4">
@@ -221,7 +221,7 @@
                 <p>Projects</p>
               </div>
             </div>
-          </div>
+          </div> -->
 
           <!-- <div class="col-lg-3 col-md-6">
             <div class="count-box">
@@ -233,7 +233,7 @@
             </div>
           </div> -->
 
-          <div class="col-lg-4 col-md-6">
+          <!-- <div class="col-lg-4 col-md-6">
             <div class="count-box">
               <i class="bi bi-people" style="color: #bb0852;"></i>
               <div>
@@ -246,7 +246,7 @@
         </div>
 
       </div>
-    </section><!-- End Counts Section -->
+    </section> --><!-- End Counts Section -->
 
 
     <!-- ======= Services Section ======= -->
@@ -741,11 +741,11 @@
 
         <div class="row" data-aos="fade-up" data-aos-delay="100">
           <div class="col-lg-12 d-flex justify-content-center">
-            <ul id="portfolio-flters">
+            <!-- <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-app">Web</li>
               <li data-filter=".filter-card">Posters</li>
-            </ul>
+            </ul> -->
           </div>
         </div>
 
@@ -753,12 +753,12 @@
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-app">
             <div class="portfolio-wrap">
-              <img src="assets/img/portfolio/work-1.png" class="img-fluid" alt="">
+              <img src="assets/img/portfolio/Dimos-Furniture/work-1.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 1</h4>
-                <p>App</p>
+                <h4>Dimos Furniture</h4>
+                <p>Web Design & Development</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/work-1.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
+                  <a href="assets/img/portfolio/Dimos-Furniture/work-1.png" data-gallery="portfolioGallery" class="portfokio-lightbox"><i class="bi bi-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
@@ -769,10 +769,10 @@
             <div class="portfolio-wrap">
               <img src="assets/img/portfolio/work-2.png" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Web 3</h4>
-                <p>Web</p>
+                <h4>AMHSS Thirurkad</h4>
+                <p>Web Design & Development</p>
                 <div class="portfolio-links">
-                  <a href="assets/img/portfolio/work-2.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Web 3"><i class="bi bi-plus"></i></a>
+                  <a href="assets/img/portfolio/work-2.png" data-gallery="portfolioGallery" class="portfokio-lightbox"><i class="bi bi-plus"></i></a>
                   <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
                 </div>
               </div>
@@ -1292,8 +1292,8 @@
             <ul>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-              <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">Custom Software</a></li>
+              <li><i class="bi bi-chevron-right"></i> <a href="#">App Development</a></li>
               <li><i class="bi bi-chevron-right"></i> <a href="#">Graphic Design</a></li>
             </ul>
           </div>
