--- a/portfolio.html
+++ b/portfolio.html
@@ -45,7 +45,7 @@
           <li><a class="nav-link scrollto" href="service.html">Services</a></li>
           <li><a class="nav-link scrollto active" href="portfolio.html">Portfolio</a></li>
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
-          <li><a href="blog.html">Blog</a></li>
+          <li><a href="#">Blog</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -125,11 +125,11 @@
   
           <div class="row" data-aos="fade-up" data-aos-delay="100">
             <div class="col-lg-12 d-flex justify-content-center">
-              <ul id="portfolio-flters">
+              <!-- <ul id="portfolio-flters">
                 <li data-filter="*" class="filter-active">All</li>
                 <li data-filter=".filter-app">Web</li>
                 <li data-filter=".filter-card">Posters</li>
-              </ul>
+              </ul> -->
             </div>
           </div>
   
@@ -137,13 +137,13 @@
   
             <div class="col-lg-4 col-md-6 portfolio-item filter-app">
               <div class="portfolio-wrap">
-                <img src="assets/img/portfolio/work-1.png" class="img-fluid" alt="">
+                <img src="assets/img/portfolio/Dimos-Furniture/work-1.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>App 1</h4>
-                  <p>App</p>
+                  <h4>Dimos Furniture</h4>
+                  <p>Web Design & Development</p>
                   <div class="portfolio-links">
-                    <a href="assets/img/portfolio/work-1.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="App 1"><i class="bi bi-plus"></i></a>
-                    <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                    <a href="assets/img/portfolio/Dimos-Furniture/work-1.png" data-gallery="portfolioGallery" class="portfokio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="dimos-furniture.html" title="More Details"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
               </div>
@@ -153,11 +153,11 @@
               <div class="portfolio-wrap">
                 <img src="assets/img/portfolio/work-2.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
-                  <h4>Web 3</h4>
-                  <p>Web</p>
+                  <h4>AMHSS Thirurkad</h4>
+                  <p>Web Design & Development</p>
                   <div class="portfolio-links">
-                    <a href="assets/img/portfolio/work-2.png" data-gallery="portfolioGallery" class="portfokio-lightbox" title="Web 3"><i class="bi bi-plus"></i></a>
-                    <a href="portfolio-details.html" title="More Details"><i class="bi bi-link"></i></a>
+                    <a href="assets/img/portfolio/work-2.png" data-gallery="portfolioGallery" class="portfokio-lightbox"><i class="bi bi-plus"></i></a>
+                    <a href="#" title="More Details"><i class="bi bi-link"></i></a>
                   </div>
                 </div>
               </div>
@@ -540,8 +540,8 @@
           <ul>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Web Design</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Web Development</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Product Management</a></li>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Marketing</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">Custom Software</a></li>
+            <li><i class="bi bi-chevron-right"></i> <a href="#">App Development</a></li>
             <li><i class="bi bi-chevron-right"></i> <a href="#">Graphic Design</a></li>
           </ul>
         </div>
