--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <li><a class="nav-link scrollto" href="portfolio.html">Portfolio</a></li>
           <!-- <li><a class="nav-link scrollto" href="#team">Team</a></li> -->
           <li><a href="#">Blog</a></li>
-          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
@@ -62,9 +62,9 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li> -->
+          </li>
 
-          <!-- <li class="dropdown megamenu"><a href="#"><span>Mega Menu</span> <i class="bi bi-chevron-down"></i></a>
+          <li class="dropdown megamenu"><a href="#"><span>Mega Menu</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li>
                 <a href="#">Column 1 link 1</a>
@@ -87,7 +87,7 @@
                 <a href="#">Column 4 link 3</a>
               </li>
             </ul>
-          </li> -->
+          </li>
 
           <li><a class="nav-link scrollto" href="contact.html">Contact</a></li>
           <li><a class="getstarted scrollto" href="#about">Get Started</a></li>
